Removed all the projects. Going to write unit tests instead. Better isolation of examples.

--- a/CSharpSixTour.DataAccessLayer/CSharpSixTour.DataAccessLayer.csproj
+++ b/CSharpSixTour.DataAccessLayer/CSharpSixTour.DataAccessLayer.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BB6ACD32-70D5-4291-AD21-A38BA61324A7}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{37387967-6768-471C-AD33-FDAE9CAB9844}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StringInterpolation</RootNamespace>
-    <AssemblyName>StringInterpolation</AssemblyName>
+    <RootNamespace>CSharpSixTour.DataAccessLayer</RootNamespace>
+    <AssemblyName>CSharpSixTour.DataAccessLayer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,11 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="PersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\CSharpSixTour.Domain\CSharpSixTour.Domain.csproj">
+      <Project>{E06B7A97-131F-4BAC-A69D-A4063AF8EA8B}</Project>
+      <Name>CSharpSixTour.Domain</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
