--- a/CSharpSixTour.Tests/CSharpSixTour.Tests.csproj
+++ b/CSharpSixTour.Tests/CSharpSixTour.Tests.csproj
@@ -56,6 +56,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="StringInterpolationTests.cs" />
     <Compile Include="NullConditionalOperatorTests.cs" />
     <Compile Include="Mocks\MockPersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
