--- a/CSharpSixTour.DataAccessLayer/CSharpSixTour.DataAccessLayer.csproj
+++ b/CSharpSixTour.DataAccessLayer/CSharpSixTour.DataAccessLayer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ICurrencyExchange.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
