--- a/CSharpSixTour.Domain/CSharpSixTour.Domain.csproj
+++ b/CSharpSixTour.Domain/CSharpSixTour.Domain.csproj
@@ -42,10 +42,13 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="Country.cs" />
+    <Compile Include="Currency.cs" />
+    <Compile Include="ExchangeRate.cs" />
     <Compile Include="ExpressionBodiedMembers.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="PhoneNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Salary.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
