Added beginning of exception filters tests and a mock currency exchange. Not sure if this example is the best way to illustrate exception filters.

--- a/CSharpSixTour.Tests/CSharpSixTour.Tests.csproj
+++ b/CSharpSixTour.Tests/CSharpSixTour.Tests.csproj
@@ -56,10 +56,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MockCurrencyExchange.cs" />
     <Compile Include="StringInterpolationTests.cs" />
     <Compile Include="NullConditionalOperatorTests.cs" />
     <Compile Include="Mocks\MockPersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ExceptionFiltersTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
